<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DetailMovie"
        android:layout_margin="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/img_main"
                    android:layout_width="125dp"
                    android:layout_height="175dp"
                    android:scaleType="fitXY"
                    tools:src="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_judul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/name" />

                    <TextView
                        android:id="@+id/tv_sutradara"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/sutradara" />

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/produksi" />

                    <TextView
                        android:id="@+id/tv_produksi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/produser" />
                    <TextView
                        android:id="@+id/textview3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/year" />

                    <TextView
                        android:id="@+id/tv_tahun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/tahun" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/gambar_terkait"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img1"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img2"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="3dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="3dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                android:layout_below="@id/judul"
                tools:text="@string/content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>